SERVER-92370 Clean up non primary database shard after untracking unsplittable collection (#24737)

GitOrigin-RevId: 33719c1337c5f16b66d238f6bcbcfda5c1dd972e